# mlflow

./: .gitignore  01_create_experiments.py  01_experiments.ipynb  01_experiments.md  02_retrieve_experiments.py  03_delete_experiments.py  04_mlflow_runs.ipynb  04_mlflow_runs.md  04_mlflow_runs.py  05_mlflow_runs2.py  06_mlflow_runs3.py  07_logging.ipynb  07_logging.md  07_logging_parametres.py  08_logging_metrics.py  09_logging_artifacts.py  10_logging_artifacts2.py  11_logging_images.py  11_models.ipynb  11_models.md  12_logging_models.py  13_logging_models2.py  14_inferences.ipynb  14_inferences.py  16_nested_runs.ipynb  16_nested_runs.md  17_custom_models.ipynb  17_custom_models.md  18_model_schema.ipynb  18_model_schema.md  19_serving_multiple_models.ipynb  19_serving_multiple_models.md  20_online_inference.ipynb  21_model_registry.ipynb  21_model_registry.md  22_model_registry_operations.ipynb  22_model_registry_operations.md  23_model_registry_operations2.ipynb  23_model_registry_operations2.md  24_hyperopt_mlflow.py  (+4 more)
demo_project/: run.py  (+2 more)
mlflow_base/: online_inference.py  pyproject.toml  run.bat  run.py  setup.cfg
mlflow_base/package/package.egg-info/: PKG-INFO  SOURCES.txt
mlflow_base/package/package/ml_training/: model_pipeline.py  train.py
mlflow_base/package/package/utils/: utils.py
mlflow_base/src/mlbase.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mlflow_base/src/mlbase/config/: config.py
mlflow_base/src/mlbase/feature/: data_processing.py
mlflow_base/src/mlbase/ml_training/: evaluation.py  model_pipeline.py  retrieval.py  train.py
(+65 files in other folders)
