[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbase"
version = "0.1.0"
description = "A reusable ML project base"
authors = [
    {name = "David Lee", email = "youngenie9@gmail.com"}
]
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "mlflow"
]

[tool.setuptools.packages.find]
where = ["src"]
