[metadata]
name = mlbase
version = 0.1.0
description = A reusable ML base project
author = David Lee
author_email = youngenie9@gmail.com

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    scikit-learn
    matplotlib
    mlflow

[options.packages.find]
where = src
